--- a/app/src/main/res/layout/activity_ball_move.xml
+++ b/app/src/main/res/layout/activity_ball_move.xml
@@ -7,6 +7,17 @@
     <com.hhl.customwidgetdemo.view.BallMoveView
         android:id="@+id/mBallMoveView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="50dp" />
+
+    <com.hhl.customwidgetdemo.view.ClipView
+        android:id="@+id/mClipView"
+        android:layout_width="wrap_content"
+        android:layout_height="100dp" />
+
+    <com.hhl.customwidgetdemo.view.WatchView
+        android:id="@+id/mWatchView"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center_horizontal"/>
 
 </LinearLayout>
